@@ -1,10 +1,13 @@
 # Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/gtksourceview-python/Attic/gtksourceview-python-2.32.0.ebuild,v 1.3 2011/02/24 18:47:25 tomka Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/gtksourceview-python/Attic/gtksourceview-python-2.32.0.ebuild,v 1.4 2011/02/26 13:07:01 eva Exp $
 
 EAPI="3"
 GCONF_DEBUG="no"
 G_PY_PN="gnome-python-desktop"
+SUPPORT_PYTHON_ABIS="1"
+PYTHON_DEPEND="2"
+RESTRICT_PYTHON_ABIS="3.*"
 
 inherit gnome-python-common
 
